Use String.formatted()
Upgraded modernizer is flagging this as a violation: make sure we
migrate.

Change-Id: I41008b78ea3ceb4ab5f8869e6b87a7bd4c548fdc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>